--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <body>
         <header>HEADER</header>
         <aside class="top-aside">ASIDE</aside>
-        <main>
-            <div class="column">COLUMN</div>
-            <div class="column">COLUMN</div>
-            <div class="column">COLUMN</div>
+        <main class="main-content">
+            <article>ARTICLE</article>
+            <div class="column-container">
+                <div class="column">COLUMN</div>
+                <div class="column">COLUMN</div>
+                <div class="column">COLUMN</div>
+            </div>
         </main>
         <aside class="bottom-aside">ASIDE</aside>
         <footer>FOOTER</footer>
