--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>HEADER</header>
         <aside class="top-aside">ASIDE</aside>
-        <main class="main-content">
+        <main>
             <article>ARTICLE</article>
             <div class="column-container">
                 <div class="column">COLUMN</div>
